--- a/DjangoQuickTour/blog/templates/blog/article.html
+++ b/DjangoQuickTour/blog/templates/blog/article.html
@@ -12,23 +12,9 @@
             <span class="pageTitle">大狗汪叨叨</span>
         </div>
         <div style="left:20px;top:150px;position:absolute;width:600px;background-color:#FFFFFF;padding:20px;">
-        {% for article in all_articles.object_list %}
             <h2 class="articleTitle">{{article.title}}</h2>
             <p class="articleAuthor">by: {{article.author}} {{article.timestamp}}</p>
-            <span class="articleBody">{{article.body|slice:'200'}}...</span>
-            <br/>
-            <a href="article/{{article.id}}">查看全文</a>
-        {%  endfor %}
-            {% if all_articles.has_previous %}
-            <div style="left:200px;position:absolute;width:60px;margin:30px;">
-                <a href="{{all_articles.previous_page_number}}"><< 前滚翻</a>
-            </div>
-            {% endif %}
-            {% if all_articles.has_next %}
-            <div style="left:340px;position:absolute;width:60px;margin:30px">
-                <a href="{{all_articles.next_page_number}}">后滚翻 >></a>
-            </div>
-            {% endif %}
+            <span class="articleBody">{{article.body|linebreaks}}</span>
         </div>
     </body>
 </html>
